correcting silver file

--- a/notebooks/Initialization_run.ipynb
+++ b/notebooks/Initialization_run.ipynb
@@ -419,7 +419,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da3a1b89-a4f4-4144-b963-db9c008093c7",
      "showTitle": false,
