Rearrangement of code

--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "aaa5a991-78e6-4b68-9e4a-c3d990ea1a31",
      "showTitle": false,
@@ -33,9 +36,24 @@
     "insurance_src_path = \"dbfs:/FileStore/Mini_Project/Source_data/Insurance_Source.csv\"\n",
     "\n",
     "bronze_patient_path = \"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\"\n",
-    "bronze_insurance_path = \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\"\n",
-    "\n",
-    "\n",
+    "bronze_insurance_path = \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "132f69c2-8198-4e66-8352-4794aa47e507",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# -----------------------------\n",
     "# 2. Read Raw Patient File\n",
     "# -----------------------------\n",
@@ -49,9 +67,24 @@
     ")\n",
     "\n",
     "print(\"Patient_RAW Schema:\")\n",
-    "df_patient_raw.printSchema()\n",
-    "\n",
-    "\n",
+    "df_patient_raw.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "7d8f3412-e388-4ff4-9521-37d7447e7fe3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# -----------------------------\n",
     "# 3. Write Patient Data to Bronze (Delta)\n",
     "# -----------------------------\n",
@@ -63,9 +96,24 @@
     "    LOCATION 'dbfs:/FileStore/Mini_Project/bronze/patient_bronze'\n",
     "\"\"\")\n",
     "\n",
-    "print(\"Patient Bronze Table Created Successfully.\")\n",
-    "\n",
-    "\n",
+    "print(\"Patient Bronze Table Created Successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "987163fb-54bc-403e-8b37-f919bcdd0d4e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# -----------------------------\n",
     "# 4. Read Raw Insurance File\n",
     "# -----------------------------\n",
@@ -79,9 +127,24 @@
     ")\n",
     "\n",
     "print(\"Insurance_RAW Schema:\")\n",
-    "df_insurance_raw.printSchema()\n",
-    "\n",
-    "\n",
+    "df_insurance_raw.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "70c851b8-779b-44d7-a105-0e803c41c90b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# -----------------------------\n",
     "# 5. Write Insurance Data to Bronze (Delta)\n",
     "# -----------------------------\n",
@@ -93,7 +156,7 @@
     "    LOCATION 'dbfs:/FileStore/Mini_Project/bronze/insurance_bronze'\n",
     "\"\"\")\n",
     "\n",
-    "print(\"Insurance Bronze Table Created Successfully.\")\n"
+    "print(\"Insurance Bronze Table Created Successfully.\")"
    ]
   }
  ],
