--- a/notebooks/02_clean_transform_silver.ipynb
+++ b/notebooks/02_clean_transform_silver.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "14443f35-08ba-40dd-b507-06263e80d009",
      "showTitle": false,
@@ -21,8 +24,27 @@
     "# ---------------------------------------------------------\n",
     "\n",
     "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *\n",
-    "\n",
+    "from pyspark.sql.types import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "68ba3cb1-9578-422e-8db9-217d5d2e5adb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# ---------------------------------------------\n",
     "# Paths\n",
     "# ---------------------------------------------\n",
@@ -30,9 +52,27 @@
     "bronze_insurance_path = \"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\"\n",
     "\n",
     "silver_patient_path = \"dbfs:/FileStore/Mini_Project/silver/patient_silver\"\n",
-    "silver_insurance_path = \"dbfs:/FileStore/Mini_Project/silver/insurance_silver\"\n",
-    "\n",
-    "\n",
+    "silver_insurance_path = \"dbfs:/FileStore/Mini_Project/silver/insurance_silver\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "de0ff40e-ddf9-4042-a38b-7ffb52df8bb6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# ---------------------------------------------\n",
     "# 1. Read Bronze Tables\n",
     "# ---------------------------------------------\n",
@@ -40,9 +80,27 @@
     "df_insurance_raw = spark.read.format(\"delta\").load(bronze_insurance_path)\n",
     "\n",
     "print(\"Bronze Patient Schema:\")\n",
-    "df_patient_raw.printSchema()\n",
-    "\n",
-    "\n",
+    "df_patient_raw.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c717a929-58df-4d56-b312-b1d5f62b6373",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# ---------------------------------------------\n",
     "# 2. Clean + Transform Patient Data (Silver)\n",
     "# ---------------------------------------------\n",
@@ -84,9 +142,27 @@
     "df_patient_silver.createOrReplaceTempView(\"patient_landing_cleaned\")\n",
     "\n",
     "print(\"Silver Patient Schema:\")\n",
-    "df_patient_silver.printSchema()\n",
-    "\n",
-    "\n",
+    "df_patient_silver.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "69aebacf-afb9-4590-969d-c98d13105e16",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# ---------------------------------------------\n",
     "# 3. Write Silver Patient Delta Table\n",
     "# ---------------------------------------------\n",
@@ -98,9 +174,27 @@
     "    LOCATION 'dbfs:/FileStore/Mini_Project/silver/patient_silver'\n",
     "\"\"\")\n",
     "\n",
-    "print(\"Silver Patient Table Created Successfully.\")\n",
-    "\n",
-    "\n",
+    "print(\"Silver Patient Table Created Successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6b7db070-1bc5-4647-9e8f-129f7fb65078",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "# ---------------------------------------------\n",
     "# 4. Insurance Silver (Simple Clean)\n",
     "# ---------------------------------------------\n",
@@ -121,7 +215,7 @@
     "    LOCATION 'dbfs:/FileStore/Mini_Project/silver/insurance_silver'\n",
     "\"\"\")\n",
     "\n",
-    "print(\"Silver Insurance Table Created Successfully.\")\n"
+    "print(\"Silver Insurance Table Created Successfully.\")"
    ]
   }
  ],
