--- a/notebooks/03_scd2_merge_gold.ipynb
+++ b/notebooks/03_scd2_merge_gold.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "af84a8d0-90e6-481f-bf23-659ae3e24598",
      "showTitle": false,
@@ -26,8 +29,24 @@
     "-- ---------------------------------------------\n",
     "CREATE OR REPLACE TEMP VIEW patient_silver AS\n",
     "SELECT *\n",
-    "FROM delta.`dbfs:/FileStore/Mini_Project/silver/patient_silver`;\n",
-    "\n",
+    "FROM delta.`dbfs:/FileStore/Mini_Project/silver/patient_silver`;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b6b4cb2b-3860-4775-b0f2-784e13b09cad",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "-- ---------------------------------------------\n",
     "-- 2. Load Existing Dimension Table (patient_dim)\n",
     "-- ---------------------------------------------\n",
@@ -49,10 +68,24 @@
     "    is_current STRING\n",
     ")\n",
     "USING DELTA\n",
-    "LOCATION 'dbfs:/FileStore/Mini_Project/dim/patient_dim';\n",
-    "\n",
-    "\n",
-    "-- ---------------------------------------------\n",
+    "LOCATION 'dbfs:/FileStore/Mini_Project/dim/patient_dim';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d6c60cdb-cd9c-4b16-be18-e191624b42ac",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "-- 3. Create Transaction Indicator (I/U/N)\n",
     "-- ---------------------------------------------\n",
     "CREATE OR REPLACE TEMP VIEW patient_landing_txn AS\n",
@@ -66,9 +99,24 @@
     "FROM patient_silver src\n",
     "LEFT JOIN patient_dim dim\n",
     "    ON src.patient_id = dim.patient_id\n",
-    "    AND dim.is_current = 'Y';\n",
-    "\n",
-    "\n",
+    "    AND dim.is_current = 'Y';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "51ea9c4d-ae33-441c-aa7f-53a2fdf94ed1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "-- ---------------------------------------------\n",
     "-- 4. Deduplicate Landing Data (ROW_NUMBER logic)\n",
     "-- ---------------------------------------------\n",
@@ -79,9 +127,24 @@
     "           ROW_NUMBER() OVER (PARTITION BY patient_id ORDER BY updated_timestamp DESC) AS rn\n",
     "    FROM patient_landing_txn\n",
     ") t\n",
-    "WHERE rn = 1;\n",
-    "\n",
-    "\n",
+    "WHERE rn = 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "09030f6a-2cbf-4b4c-8bc8-23d3bdd655a9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "-- ---------------------------------------------\n",
     "-- 5. Perform SCD-2 MERGE into patient_dim\n",
     "-- ---------------------------------------------\n",
@@ -89,7 +152,6 @@
     "USING patient_landing_final_dedup AS src\n",
     "ON dim.patient_id = src.patient_id\n",
     "AND dim.is_current = 'Y'\n",
-    "\n",
     "-- ---------------------------------------------\n",
     "-- 5A. Update existing record (close old row)\n",
     "-- ---------------------------------------------\n",
@@ -97,7 +159,6 @@
     "THEN UPDATE SET\n",
     "    dim.is_current = 'N',\n",
     "    dim.effective_end_dt = current_timestamp()\n",
-    "\n",
     "-- ---------------------------------------------\n",
     "-- 5B. Insert new version after update\n",
     "-- ---------------------------------------------\n",
@@ -136,7 +197,6 @@
     "      '9999-12-31',\n",
     "      'Y'\n",
     ")\n",
-    "\n",
     "-- ---------------------------------------------\n",
     "-- 5C. Insert new record (Insert case)\n",
     "-- ---------------------------------------------\n",
