--- a/notebooks/04_validation_queries.ipynb
+++ b/notebooks/04_validation_queries.ipynb
@@ -27,35 +27,95 @@
     "FROM patient_silver;\n",
     "\n",
     "SELECT 'Patient Dim Count (Gold)' AS metric, COUNT(*) AS value\n",
-    "FROM patient_dim;\n",
-    "\n",
-    "\n",
+    "FROM patient_dim;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a230a2b0-1716-45c4-81b4-1bb6a62b8bd2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 2. Identify All Current Active Records\n",
     "------------------------------------------------------------\n",
     "SELECT *\n",
     "FROM patient_dim\n",
     "WHERE is_current = 'Y'\n",
-    "ORDER BY patient_id;\n",
-    "\n",
-    "\n",
+    "ORDER BY patient_id;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "30a3e235-abea-4722-805b-79f26b6c7d1e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 3. Full SCD History for Each Patient\n",
     "------------------------------------------------------------\n",
     "SELECT *\n",
     "FROM patient_dim\n",
-    "ORDER BY patient_id, effective_start_dt;\n",
-    "\n",
-    "\n",
+    "ORDER BY patient_id, effective_start_dt;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ebd55291-cc58-4af7-a8c7-3b77508262f0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 4. Show Only Updated Versioned Records\n",
     "------------------------------------------------------------\n",
     "SELECT *\n",
     "FROM patient_dim\n",
     "WHERE is_current = 'N'\n",
-    "ORDER BY patient_id, effective_end_dt;\n",
-    "\n",
-    "\n",
+    "ORDER BY patient_id, effective_end_dt;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "36d1b46a-16d3-4017-ac02-efdf96d343bc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 5. Validate SCD-2 Behavior:\n",
     "--    Check if for every patient:\n",
@@ -65,8 +125,24 @@
     "SUM(CASE WHEN is_current = 'Y' THEN 1 ELSE 0 END) AS active_version_count\n",
     "FROM patient_dim\n",
     "GROUP BY patient_id\n",
-    "HAVING active_version_count != 1;\n",
-    "\n",
+    "HAVING active_version_count != 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c5812c0a-eb20-44ae-8519-fd17e1c2da9c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "------------------------------------------------------------\n",
     "-- 6. Check If Any Records Have Incorrect End Date\n",
@@ -75,9 +151,24 @@
     "FROM patient_dim\n",
     "WHERE is_current = 'Y'\n",
     "  AND effective_end_dt <> '9999-12-31'\n",
-    "ORDER BY patient_id;\n",
-    "\n",
-    "\n",
+    "ORDER BY patient_id;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f066f01d-e888-4484-9184-6bf332922e1d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 7. Compare Silver → Gold Checksum Differences\n",
     "------------------------------------------------------------\n",
@@ -90,9 +181,24 @@
     "FROM patient_silver s\n",
     "LEFT JOIN patient_dim d\n",
     "ON s.patient_id = d.patient_id\n",
-    "ORDER BY patient_id;\n",
-    "\n",
-    "\n",
+    "ORDER BY patient_id;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e87d0238-4ba8-4b6b-98ed-ea2d32f0fbf8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
     "------------------------------------------------------------\n",
     "-- 8. Validate Surrogate Key Increment Logic\n",
     "------------------------------------------------------------\n",
@@ -102,7 +208,7 @@
     "\n",
     "\n",
     "------------------------------------------------------------\n",
-    "--\n"
+    "--"
    ]
   }
  ],
