--- a/notebooks/01_ingest_raw_to_bronze.ipynb
+++ b/notebooks/01_ingest_raw_to_bronze.ipynb
@@ -44,7 +44,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "132f69c2-8198-4e66-8352-4794aa47e507",
      "showTitle": false,
@@ -75,7 +78,94 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b2c0eb88-9bca-46ec-9f8c-f48f093bd55a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "import re\n",
+    "\n",
+    "def clean_col(name: str) -> str:\n",
+    "    # strip spaces, lower-case, replace bad chars with underscore\n",
+    "    name = name.strip()\n",
+    "    name = re.sub(r\"[ ,;{}()\\n\\t=]\", \"_\", name)\n",
+    "    return name.lower()\n",
+    "\n",
+    "# After reading raw df\n",
+    "df_patient_raw = spark.read.option(\"header\", True).csv(patient_src_path)\n",
+    "\n",
+    "# Clean column names\n",
+    "df_patient_raw = df_patient_raw.toDF(*[clean_col(c) for c in df_patient_raw.columns])\n",
+    "\n",
+    "# Do the same for insurance\n",
+    "df_insurance_raw = spark.read.option(\"header\", True).csv(insurance_src_path)\n",
+    "df_insurance_raw = df_insurance_raw.toDF(*[clean_col(c) for c in df_insurance_raw.columns])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "296bf828-77f7-4892-a86f-12296a5c1ec5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DROP TABLE IF EXISTS patient_bronze;\n",
+    "DROP TABLE IF EXISTS insurance_bronze;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "987f7868-894e-485c-b646-c447b5601057",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/bronze/patient_bronze\", recurse=True)\n",
+    "dbutils.fs.rm(\"dbfs:/FileStore/Mini_Project/bronze/insurance_bronze\", recurse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7d8f3412-e388-4ff4-9521-37d7447e7fe3",
      "showTitle": false,
@@ -104,7 +194,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "987163fb-54bc-403e-8b37-f919bcdd0d4e",
      "showTitle": false,
@@ -135,7 +228,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "70c851b8-779b-44d7-a105-0e803c41c90b",
      "showTitle": false,
@@ -158,6 +254,73 @@
     "\n",
     "print(\"Insurance Bronze Table Created Successfully.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0a3143cd-19c4-47d9-a785-da674230f643",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "    select * from patient_bronze\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "10661196-414d-4f09-932a-9d5ab95a4173",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "    select * from insurance_bronze\n",
+    "\"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f3428723-9b48-4ce0-a269-de1759d23853",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_insurance_raw.printSchema()\n"
+   ]
   }
  ],
  "metadata": {
@@ -171,6 +334,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 7665633639427442,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "01_ingest_raw_to_bronze",
