--- a/notebooks/02_clean_transform_silver.ipynb
+++ b/notebooks/02_clean_transform_silver.ipynb
@@ -134,9 +134,9 @@
     "        ))\n",
     "    )\n",
     "\n",
-    "    .withColumn(\"current_timestamp\", current_timestamp())\n",
-    "    .withColumn(\"updated_timestamp\", current_timestamp())\n",
-    "    .withColumn(\"load_ctl_key\", lit(2001))\n",
+    "    .withColumn(\"create_timestamp\", current_timestamp())\n",
+    "    .withColumn(\"update_timestamp\", current_timestamp())\n",
+    "    .withColumn(\"load_ctl_key\", date_format(current_timestamp(), \"yyyyMMddHHmmss\")\n",
     ")\n",
     "\n",
     "df_patient_silver.createOrReplaceTempView(\"patient_landing_cleaned\")\n",
@@ -217,6 +217,38 @@
     "\n",
     "print(\"Silver Insurance Table Created Successfully.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "440d042a-87af-43c2-a9a7-ad2f706171f1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e8180ccd-63fa-428b-8bed-8d10ebd06531",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
