--- a/notebooks/03_scd2_merge_gold.ipynb
+++ b/notebooks/03_scd2_merge_gold.ipynb
@@ -37,7 +37,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b6b4cb2b-3860-4775-b0f2-784e13b09cad",
      "showTitle": false,
@@ -76,7 +79,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d6c60cdb-cd9c-4b16-be18-e191624b42ac",
      "showTitle": false,
@@ -107,7 +113,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "51ea9c4d-ae33-441c-aa7f-53a2fdf94ed1",
      "showTitle": false,
@@ -135,7 +144,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "09030f6a-2cbf-4b4c-8bc8-23d3bdd655a9",
      "showTitle": false,
